Fix WebViewImpl::SetZoomLevel to not be a no-op if a plugin is focused.

Bug: 735358
Change-Id: Ibe2a98bd93c1e6288e7c8e9a3633f21e3433350a
Reviewed-on: https://chromium-review.googlesource.com/577390
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Stuart Langley <slangley@chromium.org>
Commit-Queue: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#488110}