third_party/WebKit/Source/web/WebViewImpl.cpp
@@ -77,6 +77,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "core/html/HTMLMediaElement.h"
 #include "core/html/HTMLPlugInElement.h"
 #include "core/html/HTMLTextAreaElement.h"
+#include "core/html/PluginDocument.h"
 #include "core/input/ContextMenuAllowedScope.h"
 #include "core/input/EventHandler.h"
 #include "core/input/TouchActionUtil.h"
@@ -2841,8 +2842,12 @@ void WebViewImpl::PropagateZoomFactorToLocalFrameRoots(Frame* frame,
                                                        float zoom_factor) {
   if (frame->IsLocalRoot()) {
     LocalFrame* local_frame = ToLocalFrame(frame);
-    if (!local_frame->GetWebPluginContainer())
-      local_frame->SetPageZoomFactor(zoom_factor);
+    if (Document* document = local_frame->GetDocument()) {
+      if (!document->IsPluginDocument() ||
+          !ToPluginDocument(document)->GetPluginView()) {
+        local_frame->SetPageZoomFactor(zoom_factor);
+      }
+    }
   }
 
   for (Frame* child = frame->Tree().FirstChild(); child;
