third_party/WebKit/Source/core/exported/WebViewTest.cpp
@@ -43,6 +43,7 @@
 #include "core/editing/FrameSelection.h"
 #include "core/editing/InputMethodController.h"
 #include "core/editing/markers/DocumentMarkerController.h"
+#include "core/exported/FakeWebPlugin.h"
 #include "core/exported/WebSettingsImpl.h"
 #include "core/exported/WebViewBase.h"
 #include "core/frame/EventHandlerRegistry.h"
@@ -55,6 +56,7 @@
 #include "core/fullscreen/Fullscreen.h"
 #include "core/html/HTMLIFrameElement.h"
 #include "core/html/HTMLInputElement.h"
+#include "core/html/HTMLObjectElement.h"
 #include "core/html/HTMLTextAreaElement.h"
 #include "core/inspector/DevToolsEmulator.h"
 #include "core/layout/api/LayoutViewItem.h"
@@ -4397,6 +4399,39 @@ TEST_P(WebViewTest, DeviceEmulationResetScrollbars) {
   } else {
     EXPECT_NE(nullptr, frame_view->VerticalScrollbar());
   }
+}
+
+TEST_P(WebViewTest, SetZoomLevelWhilePluginFocused) {
+  class PluginCreatingWebFrameClient
+      : public FrameTestHelpers::TestWebFrameClient {
+   public:
+    // WebFrameClient overrides:
+    WebPlugin* CreatePlugin(const WebPluginParams& params) override {
+      return new FakeWebPlugin(params);
+    }
+  };
+  PluginCreatingWebFrameClient frame_client;
+  WebViewBase* web_view = web_view_helper_.Initialize(&frame_client);
+  WebURL base_url = URLTestHelpers::ToKURL("https://example.com/");
+  FrameTestHelpers::LoadHTMLString(
+      web_view->MainFrameImpl(),
+      "<!DOCTYPE html><html><body>"
+      "<object type='application/x-webkit-test-plugin'></object>"
+      "</body></html>",
+      base_url);
+  // Verify the plugin is loaded.
+  LocalFrame* main_frame = web_view->MainFrameImpl()->GetFrame();
+  HTMLObjectElement* plugin_element =
+      toHTMLObjectElement(main_frame->GetDocument()->body()->firstChild());
+  EXPECT_TRUE(plugin_element->OwnedPlugin());
+  // Focus the plugin element, and then change the zoom level on the WebView.
+  plugin_element->focus();
+  EXPECT_FLOAT_EQ(1.0f, main_frame->PageZoomFactor());
+  web_view->SetZoomLevel(-1.0);
+  // Even though the plugin is focused, the entire frame's zoom factor should
+  // still be updated.
+  EXPECT_FLOAT_EQ(5.0f / 6.0f, main_frame->PageZoomFactor());
+  web_view_helper_.Reset();  // Remove dependency on locally scoped client.
 }
 
 }  // namespace blink
